fix: Modify color of input to #f5f5f5 in dark mode

--- a/src/styles/overwrite.scss
+++ b/src/styles/overwrite.scss
@@ -19,6 +19,7 @@
 .el-input {
   &__inner {
     @include theme-dark {
+      color: #f5f5f5;
       border-color: transparent;
       background-color: map-get($theme-dark, 'input-bg');
     }
